Fixed bug with alignment search icon #482

--- a/assets/styles/_parts.scss
+++ b/assets/styles/_parts.scss
@@ -251,6 +251,7 @@ p.tags {
 
 		input[type="text"] {
 			@include placeholder(#999, $text-color);
+			box-sizing: border-box;
 			color: $text-color;
 			font-size: 16px;
 			font-style: italic;
